--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build:prod": "ng build --configuration=production",
+    "deploy:prep": "npm run build:prod && echo 'Build complete! Files ready for upload in dist/jukebox/browser/'",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
